k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-app-svc
spec:
  selector:
    app: nestjs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
